html page edits

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,15 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
 </head>
+
 <body>
-    <h1></h1>
+    <hr>
+    <div class="container">
+        <h2>Survey Questions</h2>
+        <hr>
+        <h3><strong>About You</strong></h3>
+        <h4>Name (Required)</h4>
+        <input type="text" id="name" class="form control">
+
+        <h4>Link to Photo Image</h4>
+        <input type="text" id="photo" class="form control">
+        <hr>
+
+        <h3><strong>Question 1</strong></h3>
+        <h4> Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <select class="select" id="question1">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
 
 
+        </select>
+
+        <h3><strong>Question 2</strong></h3>
+        <h4> You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+        <select class="select" id="question2">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select>
+
+        <h3><strong>Question 3</strong></h3>
+        <h4> You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+        <select class="select" id="question3">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select>
+
+        <h3><strong>Question 4</strong></h3>
+        <h4> You rarely do something out of sheer curiosity.</h4>
+        <select class="select" id="question4">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select>
+        <h3><strong>Question 5</strong></h3>
+        <h4>People can rarely upset you.</h4>
+        <select class="select" id="question5">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select>
+
+        <h3><strong>Question 6</strong></h3>
+        <h4> It is often difficult for you to relate to other people's feelings.</h4>
+        <select class="select" id="question6">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select>
+
+        <h3><strong>Question 7</strong></h3>
+        <h4> In a discussion, truth should be more important that people's sensitivities.</h4>
+        <select class="select" id="question1">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select> <br />
+
+        <h3><strong>Question 8</strong></h3>
+        <h4> You rarely get carried away by fantasies and ideas.</h4>
+        <select class="select" id="question8">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select>
+
+        <h3><strong>Question 9</strong></h3>
+        <h4> You think everyone's view should be respected regardless of wheter they are supported by facts or not.</h4>
+        <select class="select" id="question9">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select>
+
+        <h3><strong>Question 10</strong></h3>
+        <h4> You feel more energetic after spending time with a group of people.</h4>
+        <select class="select" id="question10">
+            <option value="" selected disabled>Select an Option</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5(Strongly Agree)</option>
+        </select>
+        <br>
+        <br>
+        <hr>
+    </div>
 </body>
+<script src="/js/survey.js"></script>
 
 </html>
