--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
 </head>
+
 <body>
-    
+
 
     <div class="container">
         <div class="jumbotron">
+            <h1> Employee Finder</h1>
+            <br>
+            <br>
+            <h2> Answer a few basic questions</h2>
 
-        <h2>Then find the employee with the greatest compatability!</h2>
+            <h2>Then find the employee with the greatest compatability!</h2>
+            <div>
+                <button class="btn btn-lg btn-primary">GO TO SURVEY</button>
+            </div>
+
+        </div>
 </body>
+
 </html>
