--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,7 @@
 
             <h2>Then find the employee with the greatest compatability!</h2>
             <div>
-                <button class="btn btn-lg btn-primary">GO TO SURVEY</button>
+                <a href="/survey"><button class="btn btn-lg btn-primary">GO TO SURVEY</button></a>
             </div>
 
         </div>
