--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -11,12 +11,12 @@
 
 <body>
     <hr>
-    <div class="container">
+    <form class="container" action="/api/employees" method="post" >
         <h2>Survey Questions</h2>
         <hr>
         <h3><strong>About You</strong></h3>
         <h4>Name (Required)</h4>
-        <input type="text" id="name" class="form control">
+        <input type="text" id="name" class="form control" name="username">
 
         <h4>Link to Photo Image</h4>
         <input type="text" id="photo" class="form control">
@@ -24,7 +24,7 @@
 
         <h3><strong>Question 1</strong></h3>
         <h4> Your mind is always buzzing with unexplored ideas and plans.</h4>
-        <select class="select" id="question1">
+        <select class="select" name="q1" id="question1">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -132,10 +132,15 @@
             <option value="4">4</option>
             <option value="5">5(Strongly Agree)</option>
         </select>
+
+        <br>
+        <br>
+
+        <button type="submit">Submit</button>
         <br>
         <br>
         <hr>
-    </div>
+    </form>
 </body>
 <script src="/js/survey.js"></script>
 
