--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
+
+	<link rel="stylesheet" href="assets/">
 </head>
 
 <body>
@@ -25,6 +27,16 @@
             </div>
 
         </div>
+
+    </div>
+
+    <footer class="footer">
+        <div class="container">
+            <p><a href="/api/employees">API Employees List</a></p>
+        </div>
+    </footer>
+
+    </div>
 </body>
 
 </html>
