--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -11,12 +11,12 @@
 
 <body>
     <hr>
-    <form class="container" action="/api/employees" method="post" >
+    <form class="container">
         <h2>Survey Questions</h2>
         <hr>
         <h3><strong>About You</strong></h3>
         <h4>Name (Required)</h4>
-        <input type="text" id="name" class="form control" name="username">
+        <input type="text" id="name" class="form control" name="inputname">
 
         <h4>Link to Photo Image</h4>
         <input type="text" id="photo" class="form control">
@@ -37,7 +37,7 @@
 
         <h3><strong>Question 2</strong></h3>
         <h4> You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-        <select class="select" id="question2">
+        <select class="select" name="q2" id="question2">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -48,7 +48,7 @@
 
         <h3><strong>Question 3</strong></h3>
         <h4> You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-        <select class="select" id="question3">
+        <select class="select" name="q3" id="question3">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -59,7 +59,7 @@
 
         <h3><strong>Question 4</strong></h3>
         <h4> You rarely do something out of sheer curiosity.</h4>
-        <select class="select" id="question4">
+        <select class="select" name="q4" id="question4">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -69,7 +69,7 @@
         </select>
         <h3><strong>Question 5</strong></h3>
         <h4>People can rarely upset you.</h4>
-        <select class="select" id="question5">
+        <select class="select" name="q5" id="question5">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -80,7 +80,7 @@
 
         <h3><strong>Question 6</strong></h3>
         <h4> It is often difficult for you to relate to other people's feelings.</h4>
-        <select class="select" id="question6">
+        <select class="select" name="q6" id="question6">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -91,7 +91,7 @@
 
         <h3><strong>Question 7</strong></h3>
         <h4> In a discussion, truth should be more important that people's sensitivities.</h4>
-        <select class="select" id="question1">
+        <select class="select" name="q7" id="question1">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -102,7 +102,7 @@
 
         <h3><strong>Question 8</strong></h3>
         <h4> You rarely get carried away by fantasies and ideas.</h4>
-        <select class="select" id="question8">
+        <select class="select" name="q8" id="question8">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -113,7 +113,7 @@
 
         <h3><strong>Question 9</strong></h3>
         <h4> You think everyone's view should be respected regardless of wheter they are supported by facts or not.</h4>
-        <select class="select" id="question9">
+        <select class="select" name="q9" id="question9">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -124,7 +124,7 @@
 
         <h3><strong>Question 10</strong></h3>
         <h4> You feel more energetic after spending time with a group of people.</h4>
-        <select class="select" id="question10">
+        <select class="select" name="q10" id="question10">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -141,6 +141,26 @@
         <br>
         <hr>
     </form>
+    <div id="matchModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+      
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">WE GOT A MATCH!</h4>
+            </div>
+            <div class="modal-body">
+              <p>Hey</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+      
+        </div>
+      </div>
+
 </body>
 <script src="/js/survey.js"></script>
 
