--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
+
 </head>
 
 <body>
@@ -91,7 +92,7 @@
 
         <h3><strong>Question 7</strong></h3>
         <h4> In a discussion, truth should be more important that people's sensitivities.</h4>
-        <select class="select" name="q7" id="question1">
+        <select class="select" name="q7" id="question7">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -112,7 +113,7 @@
         </select>
 
         <h3><strong>Question 9</strong></h3>
-        <h4> You think everyone's view should be respected regardless of wheter they are supported by facts or not.</h4>
+        <h4> You think everyone's view should be respected regardless of whether they are supported by facts or not.</h4>
         <select class="select" name="q9" id="question9">
             <option value="" selected disabled>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -136,8 +137,7 @@
         <br>
         <br>
 
-        <button data-toggle="modal" data-target="#my-modal" id="submit" type="submit">Submit</button>
-        <br>
+        <button id="submit" type="submit" data-toggle="modal" data-target="#exampleModal">Submit</button>
         <br>
         <hr>
     </form>
@@ -146,28 +146,32 @@
             <p><a href="/api/employees">API Employees List</a></p>
         </div>
     </footer>
+    <!-- Button trigger modal -->
 
-   
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
 
-    
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Perfect Match</h4>
-      </div>
-      <div class="modal-body">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">YOUR BEST MATCH!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body">
+                    <h2 id="matchname"></h2>
+                    <img id="matchpic" src="" alt="" width="45%">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                </div>
+            </div>
+        </div>
     </div>
 
-  </div>
-</div>
-    </div>
 
 </body>
 <script src="https://code.jquery.com/jquery.js"></script>
